--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
         <form class="add-form text-center my-4">
-            <label class="text-light" for="add">add a new todo ...</label>
+            <label class="text-light mb-3" for="add">add a new todo ...</label>
             <input class="form-control m-auto" name="add" type="text" id="add">
         </form>
     </div>
